force-app/main/default/objects/ProjectTask__c/fields/Acceptance_critertion__c.field-meta.xml
<CustomField>
    <fullName>Acceptance_critertion__c</fullName>
    <label>Acceptance critertion</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>