force-app/main/default/objects/ProjectTask__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <inlineHelpText>Shows on which date the the task was completed.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>