force-app/main/default/objects/ProjectTask__c/fields/Planed_Budged__c.field-meta.xml
<CustomField>
    <fullName>Planed_Budged__c</fullName>
    <label>Planned Budged</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>