force-app/main/default/objects/ProjectTask__c/fields/Planed_Hours__c.field-meta.xml
<CustomField>
    <fullName>Planed_Hours__c</fullName>
    <formula>Planed_Person_Days__c *8</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planed Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>