force-app/main/default/objects/ProjectTask__c/fields/Planed_Person_Days__c.field-meta.xml
<CustomField>
    <fullName>Planed_Person_Days__c</fullName>
    <label>Planned Person Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>