force-app/main/default/objects/ProjectTask__c/fields/Planned_Hours_including_Subtasks__c.field-meta.xml
<CustomField>
    <fullName>Planned_Hours_including_Subtasks__c</fullName>
    <formula>Planned_Person_Days_including_Subtasks__c *8</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planned Hours including Subtasks</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>