force-app/main/default/objects/ProjectTask__c/fields/Planned_Person_Days_including_Subtasks__c.field-meta.xml
<CustomField>
    <fullName>Planned_Person_Days_including_Subtasks__c</fullName>
    <label>Planned Person Days including Subtasks</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>