force-app/main/default/objects/ProjectTask__c/fields/Used_Hours__c.field-meta.xml
<CustomField>
    <fullName>Used_Hours__c</fullName>
    <label>Used Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>