force-app/main/default/objects/ProjectTask__c/fields/Used_Hours_including_Subtasks__c.field-meta.xml
<CustomField>
    <fullName>Used_Hours_including_Subtasks__c</fullName>
    <label>Used Hours including Subtasks</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>