force-app/main/default/objects/ProjectTask__c/listViews/My_Open.listView-meta.xml
<ListView>
    <fullName>My_Open</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Planned,Started,Paused,Review</value>
    </filters>
    <label>My Open Tasks</label>
</ListView>